avance hasta hacer responsive la primera page

--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-secondary-subtle">
             <h1>Nacca<span>Shoes</span></h1>
                 <ul class="navbar-nav">
                   <li class="nav-item">
@@ -35,37 +35,37 @@
             <h2 class="namesection">Nike</h2>
             <div class="calzado">
             <div >
-                <img  class="imagcalzado" src="../img/jordanazul.png" alt="jordan azul">
+                <img  class="nike" src="../img/jordanazul.png" alt="jordan azul">
                 <h3>Jordan azul</h3>
                 <h4>$120000</h4>
                 <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
-                <img class="imagcalzado" src="../img/jordanblancaynegra.png" alt="jordan blanca y negra">
+                <img class="nike" src="../img/jordanblancaynegra.png" alt="jordan blanca y negra">
                 <h3>Jordan blanca y negra</h3>
                 <h4>$150000</h4>
                 <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
-                <img class="imagcalzado" src="../img/jordanrosa.png" alt="jordan rosa">
+                <img class="nike" src="../img/jordanrosa.png" alt="jordan rosa">
                 <h3>Jordan rosa</h3>
                 <h4>$130000</h4>
                 <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
-                <img class="imagcalzado" src="../img/jordanverde.png" alt="jordan verde">
+                <img class="nike" src="../img/jordanverde.png" alt="jordan verde">
                 <h3>Jordan verde</h3>
                 <h4>$110000</h4>
                 <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
-                <img class="imagcalzado" src="../img/jordnrojanegra.png" alt="jordan roja y negra">
+                <img class="nike" src="../img/jordnrojanegra.png" alt="jordan roja y negra">
                 <h3>Jordan roja y negra</h3>
                 <h4>$190000</h4>
                 <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
-                <img class="imagcalzado" src="../img/jordanrosa.png" alt="jordan roja y negra">
+                <img class="nike" src="../img/jordanrosa.png" alt="jordan roja y negra">
                 <h3>Jordan rosa y blanca</h3>
                 <h4>$190000</h4>
                 <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
@@ -88,6 +88,65 @@
                 <div class="grid-items"><img src="../img/adidas11.png" alt="zapas adidas"></div>
                 <div class="grid-items"><img src="../img/adidas12.png" alt="zapas adidas"></div>
             </div>
+        </section>
+        <section>
+            <h2 class="namesection">Puma</h2>
+            <div class="calzado">
+            <div >
+                <img  class="puma" src="../img/puma1.png" alt="puma">
+                <h3>Puma blanca y negra</h3>
+                <h4>$70000</h4>
+                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+            </div>
+            <div >
+                <img class="puma" src="../img/puma2.png" alt="jordan blanca y negra">
+                <h3>Puma 3 colores</h3>
+                <h4>$75000</h4>
+                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+            </div>
+            <div >
+                <img class="puma" src="../img/puma3.png" alt="jordan rosa">
+                <h3>Puma ordinals</h3>
+                <h4>$60000</h4>
+                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+            </div>
+            <div >
+                <img class="puma" src="../img/puma4.png" alt="jordan verde">
+                <h3>Puma negra</h3>
+                <h4>$50000</h4>
+                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+            </div>
+            <div >
+                <img class="puma" src="../img/puma5.png" alt="jordan roja y negra">
+                <h3>Puma roja y negra</h3>
+                <h4>$60000</h4>
+                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+            </div>
+            <div >
+                <img class="puma" src="../img/puma6.png" alt="jordan roja y negra">
+                <h3>Puma multi</h3>
+                <h4>$90000</h4>
+                <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
+            </div>
+            <div >
+                <img class="puma" src="../img/puma7.png" alt="jordan roja y negra">
+                <h3>Puma rosa, negra y blanca</h3>
+                <h4>$80000</h4>
+                <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
+            </div>
+            <div >
+                <img class="puma" src="../img/puma8.png" alt="jordan roja y negra">
+                <h3>Puma exe</h3>
+                <h4>$40000</h4>
+                <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
+            </div>
+            <div >
+                <img class="puma" src="../img/puma9.png" alt="jordan roja y negra">
+                <h3>Puma negra y blanca</h3>
+                <h4>$80000</h4>
+                <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
+            </div>
+        </div>
         </section>
     </main>
     <footer>
