--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-secondary-subtle">
             <h1>Nacca<span>Shoes</span></h1>
                 <ul class="navbar-nav">
                   <li class="nav-item">
@@ -56,9 +56,56 @@
                 </div>
             </form>
         </section>
-        <section class="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.45340434345!2d-58.515699388797486!3d-34.61565476844459!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1693949707433!5m2!1ses-419!2sar" width="400" height="300"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+        <section class="preguntas">
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        ¿Cuál es la política de devolución de zapatillas?
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse " data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                       <p> Nuestra política de devolución permite devolver zapatillas en un plazo de 30 días a partir de la fecha de compra. Las zapatillas deben estar en su estado original y sin signos de uso. Para obtener más detalles sobre el proceso de devolución, visita nuestra página de Política de Devoluciones.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        ¿Puedo cambiar o cancelar mi pedido de zapatillas después de realizar la compra?
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <p>Sí, puedes modificar o cancelar tu pedido si nos contactas antes de que sea enviado. Una vez que el pedido ha sido procesado y enviado, no será posible hacer cambios. Comunícate con nuestro servicio de atención al cliente lo más pronto posible para solicitar cambios.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        ¿Qué métodos de pago aceptan para la compra de zapatillas?
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <p>Aceptamos los siguientes métodos de pago: tarjetas de crédito/débito (Visa, MasterCard, American Express), efectivo, transferencia bancaria. Puedes seleccionar tu método de pago preferido al realizar tu compra.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                          ¿Donde están ubicados?
+                      </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                         <p>Nuestra tienda de zapatillas tiene su sede central en Buenos Aires, Argentina. Además, contamos con diversas sucursales y puntos de distribución en todo el país, lo que nos permite ofrecer nuestros productos de manera conveniente en múltiples ubicaciones. También puedes realizar compras en línea a través de nuestro sitio web desde cualquier lugar del mundo y recibir tus zapatillas en la comodidad de tu hogar.</p>
+                      </div>
+                    </div>
+              </div>
         </section>
     </main>
     
