--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-secondary-subtle">
             <h1>Nacca<span>Shoes</span></h1>
                 <ul class="navbar-nav">
                   <li class="nav-item">
@@ -36,7 +36,7 @@
   <h3>"Tus pasos, nuestro estilo"</h3>
 </div>
 
-        <section>
+        <section class="carrusel">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
