--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-secondary-subtle">
             <h1>Nacca<span>Shoes</span></h1>
                 <ul class="navbar-nav">
                   <li class="nav-item">
