--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -33,42 +33,42 @@
     <main>
         <section>
             <h2 class="namesection">Nike</h2>
-            <div class="calzado">
+            <div class="calzadonike">
             <div >
                 <img  class="nike" src="../img/jordanazul.png" alt="jordan azul">
                 <h3>Jordan azul</h3>
                 <h4>$120000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarnike" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="nike" src="../img/jordanblancaynegra.png" alt="jordan blanca y negra">
                 <h3>Jordan blanca y negra</h3>
                 <h4>$150000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarnike" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="nike" src="../img/jordanrosa.png" alt="jordan rosa">
                 <h3>Jordan rosa</h3>
                 <h4>$130000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarnike" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="nike" src="../img/jordanverde.png" alt="jordan verde">
                 <h3>Jordan verde</h3>
                 <h4>$110000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarnike" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="nike" src="../img/jordnrojanegra.png" alt="jordan roja y negra">
                 <h3>Jordan roja y negra</h3>
                 <h4>$190000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarnike" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="nike" src="../img/jordanrosa.png" alt="jordan roja y negra">
                 <h3>Jordan rosa y blanca</h3>
                 <h4>$190000</h4>
-                <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarnike"  href=  "../pages/contactanos.html">Comprar</a>
             </div>
         </div>
         </section>
@@ -91,60 +91,60 @@
         </section>
         <section>
             <h2 class="namesection">Puma</h2>
-            <div class="calzado">
+            <div class="calzadopuma">
             <div >
                 <img  class="puma" src="../img/puma1.png" alt="puma">
                 <h3>Puma blanca y negra</h3>
                 <h4>$70000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarpuma" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="puma" src="../img/puma2.png" alt="jordan blanca y negra">
                 <h3>Puma 3 colores</h3>
                 <h4>$75000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarpuma" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="puma" src="../img/puma3.png" alt="jordan rosa">
                 <h3>Puma ordinals</h3>
                 <h4>$60000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarpuma" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="puma" src="../img/puma4.png" alt="jordan verde">
                 <h3>Puma negra</h3>
                 <h4>$50000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarpuma" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="puma" src="../img/puma5.png" alt="jordan roja y negra">
                 <h3>Puma roja y negra</h3>
                 <h4>$60000</h4>
-                <a class="botoncomprar" href="../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarpuma" href="../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="puma" src="../img/puma6.png" alt="jordan roja y negra">
                 <h3>Puma multi</h3>
                 <h4>$90000</h4>
-                <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarpuma"  href=  "../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="puma" src="../img/puma7.png" alt="jordan roja y negra">
                 <h3>Puma rosa, negra y blanca</h3>
                 <h4>$80000</h4>
-                <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarpuma"  href=  "../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="puma" src="../img/puma8.png" alt="jordan roja y negra">
                 <h3>Puma exe</h3>
                 <h4>$40000</h4>
-                <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarpuma"  href=  "../pages/contactanos.html">Comprar</a>
             </div>
             <div >
                 <img class="puma" src="../img/puma9.png" alt="jordan roja y negra">
                 <h3>Puma negra y blanca</h3>
                 <h4>$80000</h4>
-                <a class="botoncomprar"  href=  "../pages/contactanos.html">Comprar</a>
+                <a class="botoncomprarpuma"  href=  "../pages/contactanos.html">Comprar</a>
             </div>
         </div>
         </section>
