falta contactanos responsive

--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -41,7 +41,7 @@
             <div class="serviciofondo">
                 <h2>Descuentos</h2>
                 <img src="../img/descuento.png" alt="descuento">
-                <p>Descuento del 20% a partir de 3 calzados</p>
+                <p>Ofertas y descuentos unicos</p>
             </div>
             <div class="serviciofondo">
              <h2>Cuotas</h2>
